; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/apei/extr_einj.c___einj_get_available_error_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/apei/extr_einj.c___einj_get_available_error_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apei_exec_context = type { i32 }

@ACPI_EINJ_GET_ERROR_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @__einj_get_available_error_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__einj_get_available_error_type(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.apei_exec_context, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = call i32 @einj_exec_ctx_init(%struct.apei_exec_context* %4)
  %7 = load i32, i32* @ACPI_EINJ_GET_ERROR_TYPE, align 4
  %8 = call i32 @apei_exec_run(%struct.apei_exec_context* %4, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %5, align 4
  store i32 %12, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  %14 = call i32 @apei_exec_ctx_get_output(%struct.apei_exec_context* %4)
  %15 = load i32*, i32** %3, align 8
  store i32 %14, i32* %15, align 4
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @einj_exec_ctx_init(%struct.apei_exec_context*) #1

declare dso_local i32 @apei_exec_run(%struct.apei_exec_context*, i32) #1

declare dso_local i32 @apei_exec_ctx_get_output(%struct.apei_exec_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
